--- a/projSprint1.ipynb
+++ b/projSprint1.ipynb
@@ -779,7 +779,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There were originally 1651 observations in this dataset. However, the score column, which is the most important column in this case, had 1277 rows as \"Not Available\", which I found to be equivalent to n/a. So, I converted these to n/a and dropped these rows. This made me end up with 374 total observations. There are 9 unique Measure Names, 4 unique conditions, and 117 county names. Other than the n/a's in the score column, there was no missing data. The main continuous variable is \"score\" and it can be seen from the above cell that the standard deviation is ~118 and that there are definitely outliers on the upper end of the distribution."
+    "There were originally 1651 observations in this dataset. However, the score column, which is the most important column in this case, had 1277 rows as \"Not Available\", which I found to be equivalent to n/a. So, I converted these to n/a and dropped these rows. This made me end up with 374 total observations. There are 9 unique Measure Names, 4 unique conditions, and 117 county names. Other than the n/a's in the score column, there was no missing data. The main continuous variable is \"score\" and it can be seen from the above cell that the standard deviation is ~118 and that there are definitely outliers on the upper end of the distribution.I am deciding to keep these outliers because they show the stark difference in hospital scores on the higher end. If they were outliers on the lower end, I would have removed them because they wouldn't be helpful for my purposes of choosing high scoring hospitals nearby."
    ]
   },
   {
